[package]
name = "ipc"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sct-reader = { path = "../sct-reader" }
bincode = "1.3.3"
serde = { version = "1.0.192", features = ["derive"] }

[dev-dependencies]
toml = "0.8.8"