[package]
name = "radar-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sct-reader = { path = "../sct-reader" }
ipc = { path = "../ipc" }
macroquad = "0.4.4"
clap = { version = "4.4.7", features = ["derive"] }
macroquad-profiler = "0.2.0"
earcutr = "0.4.3"
serde = { version = "1.0.192", features = ["derive"] }
bincode = "1.3.3"