[package]
name = "radar-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sct-reader = { path = "../sct-reader" }
common = { path = "../common" }
macroquad = "0.4.4"
clap = { version = "4.4.7", features = ["derive"] }
macroquad-profiler = "0.2.0"
earcutr = "0.4.3"
serde = { version = "1.0.192", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.18.0"
toml = "0.8.8"
fd-lock = "4.0.0"
dirs = "5.0.1"
indexmap = "2.1.0"
log = { version = "0.4.20", features = ["std"] }
ureq = { version = "2.8.0", features = ["json"] }